# ntnu-project-2016

./: .gitignore  README.md
project-code/roborobo2/: .gitignore  CMakeLists.txt  Makefile  graph_data.py  run_statistics_gather.py  run_training.py  statistics_analyzer.py  test_results.py
project-code/roborobo2/config/: default-aggregate.properties  default-self_assembly_mechanisms.properties  default-wander_bigrobots.properties  self_assembly_mechanisms_2-ports.properties  self_assembly_mechanisms_3-ports.properties  self_assembly_mechanisms_hard.properties
project-code/roborobo2/include/contrib/neuralnetworks/: CTRNN.h
project-code/roborobo2/include/core/Agents/: Robot.h
project-code/roborobo2/include/core/RoboroboMain/: roborobo.h
project-code/roborobo2/include/core/Utilities/: ExtendedProperties.h
project-code/roborobo2/include/core/World/: PhysicalObject.h  World.h
project-code/roborobo2/include/core/WorldModels/: RobotWorldModel.h
project-code/roborobo2/include/ext/Agents/: Predator.h
project-code/roborobo2/include/ext/Config/: AggregateConfigurationLoader.h  ConfigurationLoader.h  SelfAssemblyMechanismsConfigurationLoader.h
project-code/roborobo2/include/ext/SelfAssembly/: ConnectionMechanisms.h  ConnectionPort.h  GroupRobot.h  PortPosition.h  RobotGroup.h
project-code/roborobo2/include/ext/Utilities/: Vector2.h  memory.h
project-code/roborobo2/include/ext/World/: EnergyItem.h
project-code/roborobo2/include/ext/WorldModels/: GroupRobotWorldModel.h
project-code/roborobo2/results/: out-2.ports.json  out-3.ports.json  out-4.ports.json  out-easy.json  out-hard.json
project-code/roborobo2/src/core/: CircleObject.cpp  PhysicalObject.cpp  Robot.cpp  RobotWorldModel.cpp  World.cpp  roborobo.cpp
project-code/roborobo2/src/ext/: AggregateConfigurationLoader.cpp  CommunicationModule.cpp  ConfigurationLoader.cpp  ConnectionMechanisms.cpp  ConnectionPort.cpp  EnergyItem.cpp  GroupRobot.cpp  GroupRobotWorldModel.cpp  PortPosition.cpp  Predator.cpp  RobotGroup.cpp  SelfAssemblyMechanismsConfigurationLoader.cpp  Vector2.cpp
project-report/: main.tex  references.bib  (+1 more)
(+203 files in other folders)
