cmake_minimum_required(VERSION 3.3)
project(roborobo2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(include/core)
include_directories(include/contrib)
include_directories(include/ext)
include_directories(prj/)
set(SOURCE_FILES main.cpp prj/Aggregate/include/AggregateSharedData.h prj/Aggregate/include/EA/RouletteWheel.h prj/Aggregate/src/EA/RouletteWheel.cpp prj/Aggregate/include/EA/EvolutionaryAlgorithm.h prj/Aggregate/src/EA/EvolutionaryAlgorithm.cpp prj/Aggregate/include/EA/SigmaScalingSelectionMechanism.h prj/Aggregate/src/EA/SigmaScalingSelectionMechanism.cpp include/ext/SelfAssembly/WorldModels/GroupRobotWorldModel.h src/ext/GroupRobotWorldModel.cpp  src/ext/Vector2.cpp include/ext/Utilities/Vector2.h include/ext/SelfAssembly/RobotGroup.h src/ext/RobotGroup.cpp src/ext/RobotGroup.h include/ext/SelfAssembly/ConnectionMechanisms.h include/ext/SelfAssembly/Communication/CommunicationModule.h src/ext/CommunicationModule.cpp include/ext/Utilities/memory.h include/ext/SelfAssembly/ConnectionPort.h src/ext/ConnectionPort.cpp src/ext/Vector2.cpp)
add_executable(roborobo2 ${SOURCE_FILES})